# cookiecutter-hypermodern-python

./: README.md
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  pyproject.toml
